@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStubLib.c,v 1.22 2008/04/01 19:22:47 dgp Exp $
+ * RCS: @(#) $Id: tclStubLib.c,v 1.23 2008/04/02 03:37:32 dgp Exp $
  */
 
 /*
@@ -20,10 +20,7 @@
  * including the rest of the stub functions.
  */
 
-#ifndef USE_TCL_STUBS
 #define USE_TCL_STUBS
-#endif
-#undef USE_TCL_STUB_PROCS
 
 #include "tclInt.h"
 
@@ -79,10 +76,6 @@ static int isDigit(const int c)
  *
  *----------------------------------------------------------------------
  */
-
-#ifdef Tcl_InitStubs
-#undef Tcl_InitStubs
-#endif
 
 CONST char *
 Tcl_InitStubs(
@@ -165,10 +158,6 @@ Tcl_InitStubs(
  *
  *----------------------------------------------------------------------
  */
-
-#ifdef TclTomMathInitializeStubs
-#undef TclTomMathInitializeStubs
-#endif
 
 CONST char*
 TclTomMathInitializeStubs(
